# mlu-ops

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTION.md  CPPLINT.cfg  LICENSE  README.md  TEST_CI.md  bangc_helper_dtype.h  bangc_kernels.h  build.property  build.sh  check_cpplint.sh  ci.sh  contribute.md  cross.py  env.sh  env_dumpdata_set.sh  independent_build.sh  json_parser.py  kernel_depends.toml  mlu_op.h  pr.md  requirements.txt  t.md  test.sh  version_check.sh  version_pre_check.py
bangc-ops/: CMakeLists.txt  README.md  build.property  build.sh  env_dump_data_set_helper.sh  env_dumpdata_set.sh  env_gencase_set.sh  env_gencase_set_helper.sh  gen_mluops.py  independent_build.sh  kernel_depends.toml  mlu_op.h  mlu_op_kernel.h  poly_nms_launcher.cpp
bangc-ops/cmake/: generate_package_info.cmake  mluop_kernel_depends.cmake
bangc-ops/core/: cnlog.cpp  cnlog.h  cnlog.hpp  config_env.h  context.cpp  context.h  gen_case.cpp  gen_case.h  logging.cpp  logging.h  macros.h  mlu_env.cpp  mlu_env.h  mlu_op_core.h  mlu_op_internal_api.h  mlu_op_trace.cpp  preprocessor.h  subscriber.cpp  subscriber.hpp  tensor.cpp  tensor.h  tool.cpp  tool.h  type.cpp  type.h  util.cpp
bangc-ops/core/platform/: env_time.h
bangc-ops/core/runtime/: device.h
bangc-ops/kernels/: debug.h  kernel.h
bangc-ops/kernels/abs/: abs.cpp  abs.h  abs.mlu  abs_block.mlu  abs_device.mlu
bangc-ops/kernels/active_rotated_filter/: active_rotated_filter.cpp  active_rotated_filter.h  active_rotated_filter_unionx.mlu
bangc-ops/kernels/add_n/: add_n.cpp
bangc-ops/kernels/ball_query/: ball_query.cpp  ball_query.h  ball_query.mlu  ball_query_union1.mlu
bangc-ops/kernels/batch_matmul_bcast/: batch_matmul_bcast.cpp
bangc-ops/kernels/bbox_overlaps/: bbox_overlaps.cpp  bbox_overlaps.h  bbox_overlaps_union1.mlu
bangc-ops/kernels/binary_op/: binary_op_3pipeline.h  binary_op_host.cpp  binary_op_host.h
bangc-ops/kernels/border_align_backward/: border_align_backward.cpp  border_align_backward.h  border_align_backward_union1.mlu
bangc-ops/kernels/border_align_forward/: border_align_forward.cpp  border_align_forward.h  border_align_forward_union1.mlu
bangc-ops/kernels/box_iou_rotated/: box_iou_rotated.cpp  box_iou_rotated.h  box_iou_rotated_aligned.h  box_iou_rotated_nonaligned.h  box_iou_rotated_union1.mlu  box_iou_rotated_utils.h
bangc-ops/kernels/bprint/: bprint.h  bprint.mlu  bprint_union1.mlu
bangc-ops/kernels/carafe/: carafe.cpp  carafe.h  carafe.mlu  carafe_block.mlu  carafe_union1.cpp
bangc-ops/kernels/concat/: concat.cpp
bangc-ops/kernels/copy/: copy.cpp  copy.h  copy.mlu  copy_mlu.h
bangc-ops/kernels/dcn_backward_data/: dcn_backward_data.cpp
bangc-ops/kernels/deform_roi_pool/: deform_roi_pool.cpp  deform_roi_pool.h  deform_roi_pool_union1.mlu
bangc-ops/kernels/diff_iou_rotated_sort_vertices_forward/: diff_iou_rotated_sort_vertices_forward.cpp  diff_iou_rotated_sort_vertices_forward.h  diff_iou_rotated_sort_vertices_forward_block.mlu
bangc-ops/kernels/div/: div.cpp  div.h  div.mlu  div_block.mlu  div_device.mlu
bangc-ops/kernels/dynamic_point_to_voxel_backward/: dynamic_point_to_voxel_backward.cpp  dynamic_point_to_voxel_backward.h  dynamic_point_to_voxel_backward.mlu  dynamic_point_to_voxel_backward_union1.mlu
bangc-ops/kernels/dynamic_point_to_voxel_forward/: dynamic_point_to_voxel_forward.cpp  dynamic_point_to_voxel_forward.h  dynamic_point_to_voxel_forward_union1.mlu  dynamic_point_to_voxel_mask_block.mlu
bangc-ops/kernels/expand/: expand.cpp  expand.h  expand_mlu.mlu
bangc-ops/kernels/fft/: README.md  fft.cpp  fft.h  fft.mlu
bangc-ops/kernels/fill/: fill.cpp  fill.h  fill_mlu.h  fill_mlu.mlu
bangc-ops/kernels/fill_zero/: fill_zero.h  fill_zero.mlu
bangc-ops/kernels/focal_loss_sigmoid/: focal_loss_sigmoid.cpp  focal_loss_sigmoid.h  focal_loss_sigmoid_backward_union1.mlu  focal_loss_sigmoid_forward_union1.mlu  focal_loss_sigmoid_union1.mlu
bangc-ops/kernels/gather_nd/: gather_nd.cpp
bangc-ops/kernels/generate_proposals_v2/: generate_proposals_v2.cpp  generate_proposals_v2.h  generate_proposals_v2.mlu  generate_proposals_v2_union1.mlu
bangc-ops/kernels/get_indice_pairs/: get_indice_pairs.cpp  get_indice_pairs_block.mlu  get_indice_pairs_structs.cpp  get_indice_pairs_structs.h  get_indice_pairs_utils.h  normal_get_indice_pairs.cpp  normal_get_indice_pairs.h
bangc-ops/kernels/indice_convolution_backward_data/: indice_convolution_backward_data.cpp  indice_convolution_backward_data.h
bangc-ops/kernels/indice_convolution_backward_filter/: indice_convolution_backward_filter.cpp
bangc-ops/kernels/indice_convolution_forward/: indice_convolution_forward.cpp
bangc-ops/kernels/kernel_wrapper/: export_statement.h  wrapper.h
bangc-ops/kernels/log/: log.cpp  log.h  log.mlu  log_block.mlu  log_device.mlu
bangc-ops/kernels/masked_col2im_forward/: masked_col2im_forward.cpp  masked_col2im_forward.h  masked_col2im_forward_union1.mlu
bangc-ops/kernels/masked_im2col_forward/: masked_im2col_forward.cpp  masked_im2col_forward.h  masked_im2col_forward_union1.mlu
bangc-ops/kernels/matmul/: matmul.cpp
bangc-ops/kernels/ml_nms/: ml_nms.cpp  ml_nms.h  ml_nms.mlu  ml_nms.nlu  ml_nms_block.mlu  ml_nms_union.mlu
bangc-ops/kernels/moe_dispatch_backward_data/: moe_dispatch_backward_data.cpp  moe_dispatch_backward_data.h  moe_dispatch_backward_data_union1.mlu
bangc-ops/kernels/moe_dispatch_backward_gate/: moe_dispatch_backward_gate.cpp  moe_dispatch_backward_gate.h  moe_dispatch_backward_gate_union1.mlu
bangc-ops/kernels/moe_dispatch_forward/: moe_dispatch_forward.cpp  moe_dispatch_forward.h  moe_dispatch_forward_block.mlu
bangc-ops/kernels/ms_deform_attn_backward/: ms_deform_attn_backward.cpp  ms_deform_attn_backward.h  ms_deform_attn_backward_fast_union1.mlu  ms_deform_attn_backward_small_channels_union1.mlu  ms_deform_attn_backward_union1.mlu
bangc-ops/scripts/: gen_symbol_visibility_map.py  utils.bash
bangc-ops/test/: CMakeLists.txt
bangc-ops/tools/: check_file_name.py  check_log_error.py  coverage.sh  format2google
bangpy-ops/: README.md  (+1 more)
(+2279 files in other folders)
